--- a/index.html
+++ b/index.html
@@ -1,7 +1,46 @@
 <!DOCTYPE html>
 <html>
+<head>
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Archivo:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900">
+	<style>
+		:root{
+			--bg: #FED;
+			--content: #333;
+			--light-accent: #BDE;
+			--strong-accent: #256;
+		}
+		body{
+			font-family: Archivo;
+			background-color: var(--bg);
+			height: 100vh;
+			display: flex;
+			flex-direction: column;
+			align-items: center;
+			justify-content: center;
+		}
+		h1{
+			font-size: 4rem;
+			font-weight: 100;
+		}
+		a{
+			font-weight: 500;
+			transition: all ease-out 150ms;
+			padding: 0.5em 1ch;
+			background-color: var(--light-accent);
+			margin: 0.5em;
+			border-radius: 0.5em;
+			text-decoration: none;
+			color: var(--strong-accent);
+		}
+		a:hover{
+			border-radius: 0.75em;
+			letter-spacing: 1pt;
+		}
+	</style>
+</head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+		<h1>I forgor</h1>
+		<a href="https://oqipoDev.github.io/web-specimen"> Web Specimen </a>
+		<a href="https://linktr.ee/oqipo"> Other stuff </a>
 </body>
 </html>
